--- a/WalletAnalyzing/app/src/main/res/values/strings.xml
+++ b/WalletAnalyzing/app/src/main/res/values/strings.xml
@@ -78,8 +78,8 @@
     </string-array>
 
 
-    <string name="new_transaction_expense_borrower">Borrower</string>
-    <string name="new_transaction_expense_lender">Lender</string>
+    <string name="new_transaction_borrower">Borrower</string>
+    <string name="new_transaction_lender">Lender</string>
 
     <string name="new_transaction_amount">Amount</string>
     <string name="transaction_category_expense">Category</string>
