--- a/WalletAnalyzing/app/src/main/res/values/strings.xml
+++ b/WalletAnalyzing/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
 
     <string name="Input_Error_Account_Name_Empty">Name can\'t be empty!</string>
     <string name="Input_Error_Amount_Empty">Amount can\'t be empty!</string>
+    <string name="Input_Error_Amount_Invalid">Amount Invalid!</string>
+    <string name="Input_Error_Amount">Amount greater than Remain!</string>
+    <string name="Input_Error_Category_Expense_Empty">Expense category can\'t be empty!</string>
+    <string name="Input_Error_Category_Income_Empty">Income category can\'t be empty!</string>
     <string name="Input_Error_Account_Empty">Account can\'t be empty!</string>
     <string name="Input_Error_ToAccount_Empty">To Account can\'t be empty!</string>
     <string name="Input_Error_Transfer_Same_Account">Cannot transfer in same Account!</string>
@@ -216,6 +220,14 @@
     <string name="report_financial_statement_money_lent">Money Lent</string>
     <string name="report_financial_statement_money_borrowed">Money Borrowed</string>
 
+    <!-- 5_REPORT_4_Financial_Statement_Lent_Borrowed_Detail -->
+    <string name="report_lent_borrowed_detail_lent_starting_balance">Starting Balance</string>
+    <string name="report_lent_borrowed_detail_lent_collected">Collected (%d%%)</string>
+    <string name="report_lent_borrowed_detail_lent_remaining">Remaining (%d%%)</string>
+    <string name="report_lent_borrowed_detail_borrowed_starting_balance">Starting Balance</string>
+    <string name="report_lent_borrowed_detail_borrowed_repaid">Repaid (%d%%)</string>
+    <string name="report_lent_borrowed_detail_borrowed_remaining">Remaining (%d%%)</string>
+
     <!-- 5_REPORT_5_LENT_BORROW -->
     <string name="report_Lent_borrow_lent">Money Lent</string>
     <string name="report_Lent_borrow_borrow">Money Borrowed</string>
@@ -223,7 +235,6 @@
     <string name="report_Lent_borrow_lender">Lender</string>
     <string name="report_Lent_borrow_repay">Repay</string>
     <string name="report_Lent_borrow_collect">Collect</string>
-
 
     <!-- 5_REPORT_6_EVENT -->
     <string name="report_event_in_progress">In progress</string>
@@ -249,6 +260,7 @@
     <string name="title_account_add">Add account</string>
     <string name="title_account_select_type">Add account</string>
     <string name="title_account_select_currency">Select currency</string>
+    <string name="title_account_update">Update account</string>
     <string name="title_budget">Budget</string>
     <string name="title_budget_history">Budget history</string>
     <string name="title_budget_create">Add budget</string>
@@ -256,8 +268,12 @@
     <string name="title_description">Description</string>
     <string name="title_payee">Payee</string>
     <string name="title_event">Event</string>
+    <string name="title_borrower">Borrower</string>
+    <string name="title_lender">Lender</string>
     <string name="title_report_evi_account">Account</string>
     <string name="title_report_evi_time">Time</string>
+    <string name="title_report_financial_statement_lent">Lent</string>
+    <string name="title_report_financial_statement_Borrow">Borrow</string>
     <string name="title_report_expense_analysis_category">Categories</string>
 
     <string name="Save">Save</string>
