--- a/WalletAnalyzing/app/src/main/res/values-vn/strings.xml
+++ b/WalletAnalyzing/app/src/main/res/values-vn/strings.xml
@@ -79,6 +79,10 @@
     <string name="new_category_description">Diễn giải</string>
     <string name="new_category_select_as_parent">(Không chọn)</string>
 
+
+    <!-- 4_BUDGET -->
+    <string name="budget_list_empty">Không có dữ liệu.</string>
+
     <string name="budget_item_total">Hạn mức: %s</string>
     <string name="budget_item_incremental">Số dư kỳ trước: %s</string>
     <string name="budget_item_expensed">Đã chi: %s</string>
@@ -90,7 +94,7 @@
 
     <string name="budget_detail_description">Hạn mức chi: \%%s \%%s cho hạng mục: \%%s</string>
     <string name="budget_detail_description_many">Hạn mức chi: \%%s \%%s cho các hạng mục: \%%s</string>
-    <string name="budget_detail_description_all">Hạn mức chi: \%%s \%%s cho tất cả các hạng mục</string>
+    <string name="budget_detail_description_all">Hạn mức chi: \%%s %%s cho tất cả các hạng mục</string>
     <string name="budget_detail_detail">Chi tiết khoản chi</string>
     <string name="budget_detail_history">Hạn mức chi các kỳ trước</string>
     <string name="budget_history_description">Hạn mức chi kỳ trước của %s</string>
@@ -146,11 +150,10 @@
     <!-- 5_REPORT_2_Expense_Vs_Income Data -->
     <string name="report_evi_year">Năm %s</string>
     <string name="report_evi_monthly_balance">Balance: %s</string>
-    <string name="report_evi_quarterly">Quý \%%s - Balance: \%%s</string>
-    <string name="report_evi_yearly">Năm \%%02d - Balance: \%%s</string>
+    <string name="report_evi_quarterly">Quý %%s - Balance: %%s</string>
+    <string name="report_evi_yearly">Năm %%02d - Balance: %%s</string>
     <string name="report_evi_period_expense">Chi</string>
     <string name="report_evi_period_income">Thu</string>
-    <string name="report_evi_period_legend_expense">\%%s \%%s</string>
     <string name="report_evi_period_legend_total_expense">%s Total Expense</string>
 
     <!-- 5_REPORT_3_Expense_Analysis -->
@@ -247,6 +250,32 @@
     <string name="content_transfer_to">Chuyển tới %s</string>
     <string name="content_transfer_from">Chuyển từ %s</string>
     <string name="content_transfer_fee">Phí chuyển khoản: %s</string>
+    <string name="Input_Error_Amount">Bạn chi nhiều hơn số tiền còn lại!</string>
+    <string name="Input_Error_todate_invalid">Ngày không hợp lệ!</string>
+    <string name="Error_Startup_No_Data">Bạn chưa có ghi chép nào!</string>
+    <string name="budget_detail_transaction_category_sum">Σ %s</string>
+    <string name="button_delete">Xóa</string>
+    <string name="message_transaction_update_fail">Không thể cập nhật ghi chép này!</string>
+    <string name="new_transaction_borrower">Người Vay</string>
+    <string name="new_transaction_lender">Người cho vay</string>
+    <string name="report_evi_accounts">Tài khoản:</string>
+    <string name="report_evi_accounts_all_accounts">Tất cả tài khoản</string>
+    <string name="report_evi_accounts_select_all_accounts">Chọn tất cả tài khoản</string>
+    <string name="report_evi_all">Tất cả</string>
+    <string name="report_evi_expense">Chi</string>
+    <string name="report_evi_income">Thu</string>
+    <string name="report_evi_net_income">Số tiền còn lại</string>
+    <string name="report_evi_this_month">Tháng này(%%02d/%%02d)</string>
+    <string name="report_evi_this_week">Tuần này (%%02d/%%02d - %%02d/%%02d)</string>
+    <string name="report_evi_this_year">Năm nay (%02d)</string>
+    <string name="report_evi_today">Hôm nay (%%02d/%%02d/%%02d)</string>
+    <string name="report_evi_viewedby">Xem theo:</string>
+    <string name="report_evi_viewedby_fromdate">Từ ngày:</string>
+    <string name="report_evi_viewedby_todate">Tới ngày:</string>
+    <string name="title_account_update">Cập nhật tài khoản</string>
+    <string name="ListView_Empty"></string>
+    <string name="ListView_Transaction_Empty">Bạn không có ghi chép nào.</string>
+    <string name="ListView_Account_Empty">Bạn không có Tài Khoản nào. Nhấn vào dấu (+) để thêm Tài Khoản mới.</string>
 
 
 </resources>
