Update Utils Class

--- a/WalletAnalyzing/app/src/main/res/values/strings.xml
+++ b/WalletAnalyzing/app/src/main/res/values/strings.xml
@@ -24,13 +24,13 @@
 
     <string name="button_delete">Delete</string>
 
-    <string name="format_month_year" translatable="false">%02d/%02d</string>
-    <string name="format_day_month_year" translatable="false">%02d/%02d/%02d</string>
-    <string name="format_budget_day_month" translatable="false">%02d/%02d</string>
-    <string name="format_budget_day_month_year" translatable="false">(%02d/%02d/%02d)</string>
-    <string name="format_budget_day_month_year_2" translatable="false">%02d/%02d/%02d</string>
-    <string name="format_budget_date" translatable="false">(%02d/%02d - %02d/%02d)</string>
-    <string name="format_budget_date_2" translatable="false">%02d/%02d ~ %02d/%02d</string>
+    <string name="format_month_year" translatable="false">%1$d/%2$d</string>
+    <string name="format_day_month_year" translatable="false">%1$d/%2$d/%3$d</string>
+    <string name="format_budget_day_month" translatable="false">%1$d/%2$d</string>
+    <string name="format_budget_day_month_year" translatable="false">(%1$d/%2$d/%3$d)</string>
+    <string name="format_budget_day_month_year_2" translatable="false">%1$d/%2$d/%3$d</string>
+    <string name="format_budget_date" translatable="false">(%1$d/%2$d - %3$d/%4$d)</string>
+    <string name="format_budget_date_2" translatable="false">%1$d/%2$d ~ %02d/%02d</string>
 
     <string name="select_file_title">Select cert. file</string>
     <string name="serializable">Serializable</string>
